Fix issue with list wrapping, fix activity icon colors on sheet

--- a/styles/components/inventory.css
+++ b/styles/components/inventory.css
@@ -41,6 +41,7 @@ blackFlag-inventory, blackFlag-currency, blackFlag-effects {
 				}
 
 				.name {
+					--icon-fill: currentcolor;
 					--icon-size: var(--inventory-image-size);
 					img, blackflag-icon {
 						display: block;
